--- a/.github/workflows/native-compile-platforms.yml
+++ b/.github/workflows/native-compile-platforms.yml
@@ -128,12 +128,14 @@ jobs:
             echo "=============== HACK ./entry/build-profile.json5 ==============="
             sed -i "s@[^-]DRES_DIR[^=]@$ASSET_DIR@g" ./entry/build-profile.json5
             sed -i "s@[^-]DCOMMON_DIR[^=]@$GITHUB_WORKSPACE/templates/common@g" ./entry/build-profile.json5
-
             # To speedup CI, compile arm64-v8a only
             sed -i "s@\"armeabi-v7a\",@@g" ./entry/build-profile.json5
 
+            cat ./entry/build-profile.json5
+
             echo "=============== HACK ./hvigor/hvigor-wrapper.js ==============="
             sed -i "s@HVIGOR_WRAPPER_PNPM_SCRIPT_PATH,\[\"install\"\]@HVIGOR_WRAPPER_PNPM_SCRIPT_PATH,\[\"install\", \"--lockfile=false\"\]@g" ./hvigor/hvigor-wrapper.js
+            cat ./entry/build-profile.json5
 
             echo "=============== SET NPM OH REGISTRY ==============="
             echo "@ohos:registry=https://repo.harmonyos.com/npm/" >> ~/.npmrc
