--- a/.github/workflows/native-compile-platforms.yml
+++ b/.github/workflows/native-compile-platforms.yml
@@ -120,6 +120,8 @@ jobs:
 
             echo "=============== cat build/proj/cfg.cmake ==============="
             cat build/proj/cfg.cmake
+            echo "current dir: $(pwd)"
+            du -h --max-depth=3
 
             mkdir -p build/assets
 
@@ -131,11 +133,13 @@ jobs:
             # To speedup CI, compile arm64-v8a only
             sed -i "s@\"armeabi-v7a\",@@g" ./entry/build-profile.json5
 
+            echo "entry/build-profile.json5: "
             cat ./entry/build-profile.json5
 
             echo "=============== HACK ./hvigor/hvigor-wrapper.js ==============="
             sed -i "s@HVIGOR_WRAPPER_PNPM_SCRIPT_PATH,\[\"install\"\]@HVIGOR_WRAPPER_PNPM_SCRIPT_PATH,\[\"install\", \"--lockfile=false\"\]@g" ./hvigor/hvigor-wrapper.js
-            cat ./entry/build-profile.json5
+            echo "hvigor/hvigor-wrapper.js: "
+            cat ./hvigor/hvigor-wrapper.js
 
             echo "=============== SET NPM OH REGISTRY ==============="
             echo "@ohos:registry=https://repo.harmonyos.com/npm/" >> ~/.npmrc
