--- a/.github/workflows/generate-emsdk-cache.yml
+++ b/.github/workflows/generate-emsdk-cache.yml
@@ -21,4 +21,6 @@ jobs:
           actions-cache-folder: 'emsdk-cache'
 
       - name: Verify
-        run: emcc -v
+        run: |
+          which emcc
+          emcc -v
