Update emsdk cache yml

--- a/.github/workflows/generate-emsdk-cache.yml
+++ b/.github/workflows/generate-emsdk-cache.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup emsdk
-        uses: mymindstorm/setup-emsdk@ab889da2abbcbb280f91ec4c215d3bb4f3a8f775
+        uses: dumganhar/setup-emsdk@997d2cde2deabda085a11f98e86e842915b0e846
         with:
           version: ${{ github.event.inputs.emsdk_version }}
           actions-cache-folder: 'emsdk-cache'
