--- a/.github/workflows/native-compile-webgpu.yml
+++ b/.github/workflows/native-compile-webgpu.yml
@@ -41,25 +41,15 @@ jobs:
           which emcc
           emcc -v
 
-      - name: Install ninja
-        run: |
-          if ! command -v ninja &> /dev/null; then
-              echo "Ninja not found, installing..."
-              # sudo apt update
-              sudo apt install ninja-build
-          else
-              echo "Ninja is already installed."
-          fi
-          which ninja
-
       - name: Compile
-        # env:
-        #   COCOS_ENGINE_DEV: 1
         run: |
           NATIVE_ROOT=$GITHUB_WORKSPACE/native
           cd $NATIVE_ROOT/cocos/renderer/gfx-wgpu
           mkdir build
           cd build
-          cmake .. -GNinja -DCMAKE_TOOLCHAIN_FILE=${EMSDK}/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake -DCMAKE_BUILD_TYPE=Debug
-          ninja
+          cmake .. -DCMAKE_TOOLCHAIN_FILE=${EMSDK}/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake -DCMAKE_BUILD_TYPE=Debug
+          # ninja
+          core_count=$(nproc)
+          echo ">>>> core count: ${core_count}"
+          make -j${core_count}
           echo "Compile WGPU by ems on Ubuntu Done!"
