--- a/.github/workflows/native-compile-platforms.yml
+++ b/.github/workflows/native-compile-platforms.yml
@@ -1,9 +1,6 @@
 name: <Native> Compile
 
 on:
-  #cjh push:
-  #   branches:
-  #     - '**'
   pull_request:
     paths:
     - 'templates/**'
@@ -16,13 +13,89 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  compile_openharmony:
-    name: "Openharmony"
-    if: 
-      (! contains(github.event.pull_request.body, '[X] does not change any runtime related code or build configuration'))
+
+compile_android:
+    name: "Android"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Download external libraries
+        shell: bash
+        run: |
+          EXT_VERSION=`node ./.github/workflows/get-native-external-version.js`
+          git clone --branch $EXT_VERSION --depth 1 https://github.com/cocos/cocos-engine-external native/external
+      - uses: nttld/setup-ndk@v1
+        id: setup-ndk
+        with:
+          ndk-version: r21e
+          add-to-path: false
+      - uses: actions/setup-java@v3
+        id: setup-jdk
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+      - name: Compile
+        env:
+          COCOS_ENGINE_DEV: 1
+        run: |
+          NATIVE_ROOT=$GITHUB_WORKSPACE/native
+          ANDORID_NDK=$ANDROID_NDK_LATEST_HOME
+          NATIVE_DIR=$GITHUB_WORKSPACE/templates/android-template
+          echo "Compiling Android ... "
+          cd $GITHUB_WORKSPACE/templates/
+          echo "message(STATUS \"hook before \${CC_TARGET_NAME}\")" >> android/template/Pre-Sample.cmake
+          echo "message(STATUS \"hook after \${CC_TARGET_NAME}\")" >> android/template/Post-Sample.cmake
+          if [ ! -d  android-template ]; then
+            cp -r android/template android-template
+          fi
+          cd $GITHUB_WORKSPACE/templates/android/build
+          mkdir -p build-android/proj
+          touch build-android/proj/cfg.cmake
+          echo "set(CC_USE_GLES3 ON)" >> build-android/proj/cfg.cmake
+          echo "set(CC_USE_VULKAN ON)" >> build-android/proj/cfg.cmake
+          echo "set(CC_USE_GLES2 ON)" >> build-android/proj/cfg.cmake
+          echo "set(USE_WEBSOCKET_SERVER ON)" >> build-android/proj/cfg.cmake
+          echo "set(CMAKE_CXX_STANDARD_REQUIRED ON)" >> build-android/proj/cfg.cmake
+          echo "set(COCOS_X_PATH $NATIVE_ROOT)" >> build-android/proj/cfg.cmake
+          echo "set(CC_EXECUTABLE_NAME \"\")" >> build-android/proj/cfg.cmake
+
+          mkdir -p build-android/proj/res/values
+          cat << EOF > build-android/proj/res/values/strings.xml
+          <resources>
+              <string name="app_name" translatable="false">CocosGame</string>
+          </resources>
+          EOF
+
+          mkdir -p build-android/assets
+
+          ASSET_DIR=$GITHUB_WORKSPACE/templates/android/build/build-android/
+
+          sed -i "s@^PROP_NDK_PATH.*@PROP_NDK_PATH=$ANDORID_NDK@g" gradle.properties
+          sed -i "s@^APPLICATION_ID.*@APPLICATION_ID=com.cocos.android@g" gradle.properties
+          sed -i "s@^RES_PATH.*@RES_PATH=$ASSET_DIR@g" gradle.properties
+          sed -i "s@^COCOS_ENGINE_PATH.*@COCOS_ENGINE_PATH=$NATIVE_ROOT@g" gradle.properties
+          sed -i "s@^NATIVE_DIR.*@NATIVE_DIR=$NATIVE_DIR@g" gradle.properties
+
+          # To speedup CI, compile arm64-v8a only
+          # sed -i "s@^PROP_APP_ABI.*@PROP_APP_ABI=armeabi-v7a:arm64-v8a:x86@g" gradle.properties
+          df -h
+          sed -i "s@^PROP_APP_ABI.*@PROP_APP_ABI=arm64-v8a@g" gradle.properties
+
+          echo "Compile Android - cmake ..."
+          echo "ANDORID_NDK ${ANDROID_NDK} or ${ANDROID_NDK_HOME}"
+          ./gradlew :CocosGame:assembleDebug --quiet
+          df -h
+          ./gradlew clean
+          sed -i "s@^PROP_APP_ABI.*@PROP_APP_ABI=armeabi-v7a@g" gradle.properties
+          ./gradlew :CocosGame:assembleDebug --quiet
+          df -h
+          echo "Compile Android Debug Done!"
+
+  compile_openharmony:
+    name: "Openharmony"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
       - name: Download external libraries
         shell: bash
         run: |
