--- a/.github/workflows/native-compile-webgpu.yml
+++ b/.github/workflows/native-compile-webgpu.yml
@@ -1,7 +1,7 @@
 name: <Native> Compile WebGPU
 
 on:
-  push:
+  pull_request:
     paths:
     - 'native/external-config.json'
     - 'native/cocos/base/**'
@@ -21,7 +21,7 @@ jobs:
     name: "Emscripten"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Download external libraries
         shell: bash
