--- a/.github/workflows/native-compile-platforms.yml
+++ b/.github/workflows/native-compile-platforms.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           ndk-version: r21e
           add-to-path: false
+          local-cache: true
       - uses: actions/setup-java@v3
         id: setup-jdk
         with:
